Corrección de Section4 CSS width value
El width de la #section4 hacía overflow en 100%, así que estaba en 93%. Pero no era responsive.
Ahora en 96%-5px se ve bien en diferentes anchos de pantalla.

--- a/Sprint 1/Exercici 1/estils.css
+++ b/Sprint 1/Exercici 1/estils.css
@@ -74,8 +74,9 @@ Sección 3*/
     flex-direction: column;
     background-color: rgb(255, 93, 93);
 }
+/*El width 100% hacía overflow*/
 #section4 div {
-    width:93%;
+    width:calc(96%-5px);
     background-color:khaki;
 }
 
