--- a/Sprint 1/estils.css
+++ b/Sprint 1/estils.css
@@ -1,19 +1,19 @@
 /*General*/
 .container {
     display:flex;
-    background-color:rgb(29, 29, 29);
+   /* background-color:rgb(29, 29, 29);*/
     flex-direction:column;
 }
 #container2 {
     flex-direction:row;
 }
 .section {
-    background-color:rgb(209, 209, 209);
+    /*background-color:rgb(209, 209, 209);*/
     display:flex;
 }
-.element {
+/*.element {
     background-color:rgb(255, 162, 162);
-}
+}*/
 .element100 {
     width:100%;
 }
@@ -23,12 +23,12 @@ div {
 }
 /*Primer Container
 Sección 1*/
-#section1 {
+/*#section1 {
     background-color:rgb(82, 94, 105);
 }
 #section1 div {
     background-color:rgb(255, 93, 93);
-}
+}*/
 #element1 {
     flex:1;
 }
@@ -38,13 +38,13 @@ Sección 1*/
 #element3 {
     flex:1;
 }
-/*Sección 2*/
+/*Sección 2
 #section2 {
     background-color:rgb(255, 155, 88)
 }
 #section2 div {
     background-color:rgb(255, 255, 100);
-}
+}*/
 /*Segundo Container
 Sección 3*/
 #section3 {
@@ -111,5 +111,69 @@ Sección 5*/
     }
     #element3-5 {
         margin-top: -10px;
+    }
+}
+/*Ejercicio 4*/
+#logo {
+    height:80px;width:80px
+}
+#container1 {
+    background-image: url("img/fons1.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:cover;
+}
+/*Menu de navegación*/
+ul#nav {
+	margin: 0;
+	padding: 0;
+    display:flex;
+	justify-content: space-between;
+}
+ul#nav li {
+	display: inline-block;
+	font-weight: 600;
+}
+ul#nav li a {
+	color: rgb(102, 102, 102);
+	text-decoration: none;
+}
+ul#nav li a:hover {
+	color: #000000;
+}
+#nav img {
+	margin: 0;
+	padding: 0;
+	float: left;
+}
+#element1 {
+    justify-content: center;
+    align-items: center;
+    display:flex
+}
+#element3 {
+    padding: 10px;
+    display:flex;
+    justify-content: flex-end;
+}
+#element3 i {
+    margin:0px 10px;
+}
+h1 {
+    text-align: center;
+    font-weight: 500;
+    font-size: 2rem;
+    color: rgba(255, 145, 0, 0.733);
+    background-color: #00000018;
+}
+/*Media querys mobile*/
+@media (max-width:480px) {
+    #nav {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+    #element3 {
+        justify-content: center;
     }
 }
