--- a/Sprint 1/estils.css
+++ b/Sprint 1/estils.css
@@ -52,16 +52,13 @@ Sección 3*/
     display:flex;
     flex-wrap:wrap;
     box-sizing:border-box;
-    background-color:rgb(13, 71, 90);
+    background-color:rgb(215, 215, 215);
 }
 .element3-1234 {
-    background-color:royalblue;
+    background-color:rgb(241, 241, 241);
     box-sizing:border-box;
     width:48%;
     margin:10xp auto;
-}
-#element3-5 {
-    background-color:lightsteelblue;
 }
 /*Sección 4*/
 #section4 {
@@ -70,22 +67,22 @@ Sección 3*/
     display:flex;
     flex-wrap:wrap;
     flex-direction:column;
-    background-color:rgb(255, 93, 93);
+    background-color:rgb(215, 215, 215);
 }
 /*El width 100% hacía overflow*/
 #section4 div {
     width:calc(96%-5px);
-    background-color:khaki;
+    /*background-color:khaki;*/
 }
 /*Tercer Container
 Sección 5*/
 #section5 {
-    background-color:goldenrod;
+    background-color:rgb(241, 241, 241);
 }
 /*Media querys tablet*/
 @media (max-width:1024px){
     #container2 {
-        background-color:rgb(244, 234, 96);
+        /*background-color:rgb(244, 234, 96);*/
         flex-direction:column;
     }
     #section3,#section4 {
@@ -104,16 +101,20 @@ Sección 5*/
     .element3-1234 {
         flex-direction:column;
         width:100%;
-        background-color:rgb(75, 109, 109);
+        /*background-color:rgb(75, 109, 109);
     }
     #section4 div {
-        background-color:rgb(255, 183, 27);
+        background-color:rgb(255, 183, 27);*/
     }
     #element3-5 {
         margin-top: -10px;
     }
 }
+
 /*Ejercicio 4*/
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 #logo {
     height:80px;width:80px
 }
@@ -133,6 +134,7 @@ ul#nav {
 ul#nav li {
 	display: inline-block;
 	font-weight: 600;
+    margin:5px;
 }
 ul#nav li a {
 	color: rgb(102, 102, 102);
@@ -163,8 +165,14 @@ h1 {
     text-align: center;
     font-weight: 500;
     font-size: 2rem;
-    color: rgba(255, 145, 0, 0.733);
+    color: rgba(216, 122, 0, 0.733);
     background-color: #00000018;
+}
+i {
+    color:gray;
+}
+i:hover {
+    color:black;
 }
 /*Media querys mobile*/
 @media (max-width:480px) {
@@ -176,4 +184,63 @@ h1 {
     #element3 {
         justify-content: center;
     }
+}
+/*Media querys tablet*/
+@media (max-width:1024px){
+    ul#nav {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+}
+/*Ejercicio 5*/
+.element3-1234 img {
+    display: block;
+  max-width:100%;
+  width: auto;
+  height: auto;
+}
+.subtitles {
+    max-height: 20px;
+    background-color:rgb(240, 128, 128);
+    color:rgba(241,241,241);
+}
+h2 {
+    margin:0px 0px 0px 5px
+}
+.articles {
+    display:flex;
+    padding-bottom: 30px;
+}
+.articles p,.articles a {
+    margin: 5px;
+    font-size: 0.9rem;
+    color: rgb(90, 90, 90);
+}
+.articles a {
+	text-decoration: none;
+}
+.element3-1234 {
+    position:relative
+}
+.leermas {
+    padding: 0px 1%;
+    position: absolute;
+    bottom:0;
+}
+.articles a:hover {
+    color:rgb(0, 0, 0);
+    font-weight: bold;
+}
+/*footer*/
+#section5 {
+    justify-content: center;
+    color: rgb(90, 90, 90);
+}
+/*side content*/
+#section4 {
+    align-items: center;
+    color: rgb(90, 90, 90);
 }
