--- a/Sprint 1/estils.css
+++ b/Sprint 1/estils.css
@@ -244,3 +244,64 @@ h2 {
     align-items: center;
     color: rgb(90, 90, 90);
 }
+/*Ejercicio 6*/
+#logo {
+    animation: aparecer1 3s ease-out;
+}
+.aparecer1 {
+    animation: aparecer1 3s ease-out;
+    }
+.aparecer2 {
+    animation: aparecer2 3s ease-out;
+    }
+@keyframes aparecer1 {
+    0% {
+        transform:translateY(-100px);
+        opacity: 0;
+    }
+    100% {
+        transform:translateY(0);
+        opacity: 1;
+    }
+}
+@keyframes aparecer2 {
+    0% {
+        transform:translateY(+100px);
+        opacity: 0;
+    }
+    100% {
+        transform:translateY(0);
+        opacity: 1;
+    }
+}
+@media (max-width:1024px){
+    @keyframes aparecer1 {
+        0% {
+            transform:translateX(-100px);
+            opacity: 0;
+        }
+        100% {
+            transform:translateX(0);
+            opacity: 1;
+        }
+    }
+    @keyframes aparecer2 {
+        0% {
+            transform:translateX(100px);
+            opacity: 0;
+        }
+        100% {
+            transform:translateX(0);
+            opacity: 1;
+        }
+    }
+}
+.subtitles h2 {
+    animation: aparecerDerecha 3s ease-in;
+}
+@keyframes aparecerDerecha {
+    0% {
+        transform:translateX(100px);
+        opacity: 0;
+    }
+}
