--- a/Sprint 2/sass/main.scss
+++ b/Sprint 2/sass/main.scss
@@ -6,6 +6,10 @@ $secondary: #FA5959;
 $navbar-light-toggler-border-color:white;
 $navbar-toggler-focus-width:0rem;
 
+/*Ejercicio 3*/
+
+$card-cap-bg: white !important;
+
 /*Import*/
 
 @import '../node_modules/bootstrap/scss/bootstrap.scss'
