--- a/Sprint 2/css/estils.css
+++ b/Sprint 2/css/estils.css
@@ -59,3 +59,32 @@ button.active {
     margin-top: 0;
     border-radius: 5px;
 }
+
+
+/*Ejercicio 6*/
+
+.btn:hover {
+    background-color: white !important;
+}
+
+.btn-light:hover {
+    background-color: rgba(0, 0, 0, 0.6) !important;
+    color: whitesmoke
+}
+
+.btn-primary:hover {
+    color: #5265E1 !important;
+}
+
+.btn-secondary:hover,
+.nav-link:hover,
+.accordion-button:hover {
+    color: #FA5959 !important;
+}
+
+.social:hover {
+    border: 2px solid #FA5959 !important;
+    background-color: #FA5959;
+    margin: -2px;
+    border-radius: 0px !important;
+}
