--- a/Sprint 2/css/main.css
+++ b/Sprint 2/css/main.css
@@ -1,4 +1,24 @@
 /*Ejercicio 1*/
+/*Ejercicio 3*/
+/*Ejercicio 7*/
+.card:nth-child(1) {
+  -ms-flex-item-align: start !important;
+      -ms-grid-row-align: start !important;
+      align-self: start !important;
+}
+
+.card:nth-child(2) {
+  -ms-flex-item-align: center !important;
+      -ms-grid-row-align: center !important;
+      align-self: center !important;
+}
+
+.card:nth-child(3) {
+  -ms-flex-item-align: end !important;
+      -ms-grid-row-align: end !important;
+      align-self: end !important;
+}
+
 /*Import*/
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
@@ -5175,7 +5195,7 @@ fieldset:disabled .btn {
 .card-header {
   padding: 0.5rem 1rem;
   margin-bottom: 0;
-  background-color: rgba(0, 0, 0, 0.03);
+  background-color: white !important;
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 
@@ -5185,7 +5205,7 @@ fieldset:disabled .btn {
 
 .card-footer {
   padding: 0.5rem 1rem;
-  background-color: rgba(0, 0, 0, 0.03);
+  background-color: white !important;
   border-top: 1px solid rgba(0, 0, 0, 0.125);
 }
 
