--- a/Sprint 3/css/style.css
+++ b/Sprint 3/css/style.css
@@ -1,4 +1,39 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
-body{
+body {
     font-family: Poppins;
+    color: whitesmoke;
+    margin: 0%;
+    top: 0px
+}
+
+
+/*Ejercicio 10 estilos del Index*/
+
+#indexBody {
+    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../images/background-index.png');
+    background-position: center;
+    background-size: cover;
+    min-height: 100%;
+}
+
+html,
+body {
+    margin: 0;
+    height: 100%;
+}
+
+.card-body {
+    border-width: 0px;
+}
+
+.card-footer {
+    border-width: 0px;
+}
+
+.card-cap {
+    background-color: rgb(236, 236, 236) !important;
+}
+
+.red-background {
+    background-color: rgb(206, 0, 21) !important;
 }
