--- a/Sprint 6/sprint/src/App.css
+++ b/Sprint 6/sprint/src/App.css
@@ -36,3 +36,22 @@
     transform: rotate(360deg);
   }
 }
+
+button {
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-weight: 600;
+  border-radius: 3px;
+  padding: 12px 24px;
+  border: 0;
+  color: #fff;
+  background: #000a47;
+  line-height: 1.15;
+  font-size: 16px;
+  margin:5px
+  }
+
+.active {
+  background: hsla(0, 100%, 50%, 0.6)!important;
+  }
