--- a/Sprint 6/sprint/src/App.css
+++ b/Sprint 6/sprint/src/App.css
@@ -46,7 +46,7 @@ button {
   padding: 12px 24px;
   border: 0;
   color: #fff;
-  background: #000a47;
+  background: #c03600;
   line-height: 1.15;
   font-size: 16px;
   margin:5px
@@ -55,3 +55,9 @@ button {
 .active {
   background: hsla(0, 100%, 50%, 0.6)!important;
   }
+
+html, 
+body,
+#root {
+    height: 100%;
+}
