--- a/Sprint 7/sprint7/src/css/App.css
+++ b/Sprint 7/sprint7/src/css/App.css
@@ -45,3 +45,31 @@ a {
 img {
   margin-bottom:-14px;
 }
+
+.DisplayNone {
+  display: none;
+}
+
+.ModalScreen {
+  position: fixed;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgba(0,0,0,0.4);
+  justify-content: center;
+}
+
+.ModalContent {
+  width: 70%;
+  position: fixed;
+  left: 50%;
+  margin-left: -37.5%;
+  background-color: #fefefe;
+  padding: 20px;
+  border: 2px solid rgb(0, 0, 0);
+  color:black;
+  border-radius: 20px;
+}
