Sprint 7 Display several budgets 0.1

--- a/Sprint 7/sprint7/src/css/App.css
+++ b/Sprint 7/sprint7/src/css/App.css
@@ -73,3 +73,15 @@ img {
   color:black;
   border-radius: 20px;
 }
+
+#createdBudgets {
+  width: 200px;
+  position: fixed;
+  left: 50px;
+  top:50px;
+  background-color: #fefefe;
+  padding: 20px;
+  border: 2px solid rgb(0, 0, 0);
+  color:black;
+  border-radius: 20px;
+}
