Sprint 8 Exercise 2 Details

--- a/Sprint 8/star-wars/src/App.css
+++ b/Sprint 8/star-wars/src/App.css
@@ -90,8 +90,12 @@ header {
   margin: 7px;
 }
 
-.shipDetailsHide {
+.shipDetails {
   display:none;
+}
+
+.shipDetailsShow {
+  display:block;
 }
 
 table {
