--- a/Sprint 8/star-wars/src/App.css
+++ b/Sprint 8/star-wars/src/App.css
@@ -54,6 +54,10 @@ header {
 }
 
 @media screen and (min-width: 600px) {
+  html {
+    padding-bottom: 40px;
+  }
+  
   .nav li {
     width: 150px;
     height: 50px;
