--- a/Sprint 8/star-wars/src/App.css
+++ b/Sprint 8/star-wars/src/App.css
@@ -105,3 +105,34 @@ header {
 table {
   padding-left: 3%;
 }
+
+input[type=text]:focus {
+  background-color: #484848;
+  color: #edd700;
+}
+
+input[type=text] {
+  border-radius: 3px;
+  height: 40px;
+  line-height: 40px;
+  padding: 0 15px;
+  color: #aaa;
+}
+
+.title {
+  color: #edd700;
+    font-size: 25.6px;
+    font-weight: 100;
+    text-transform: uppercase;
+    line-height: 25.2px;
+    text-align: center;
+    padding: 0 18px;
+    margin: 14px 0 18px;
+}
+
+.nav-log {
+  position:absolute;
+  top:10px;
+  right:10px;
+  width:auto;
+}
