--- a/Sprint 8/star-wars/src/App.css
+++ b/Sprint 8/star-wars/src/App.css
@@ -104,7 +104,7 @@ input[type="text"] {
   height: 40px;
   line-height: 40px;
   padding: 0 15px;
-  color: #aaa;
+  color: rgb(90, 90, 90);
 }
 
 .title {
@@ -151,19 +151,32 @@ td {
   z-index: 999;
 }
 
+.RegisterLogin {
+  margin-right: 10px;
+  text-align: right;
+  color: rgb(199, 199, 199);
+  text-shadow: 0 1px 6px rgb(0 0 0 / 50%);
+  font-family: helvetica;
+}
+
 .clickable {
-  cursor:pointer;
+  cursor: pointer;
+}
+
+#separator {
+  color: #999;
+  margin: 0 5px;
 }
 
 .modal {
-  color: #aaa;
+  color: rgb(160, 160, 160);
   padding: 20px 40px;
   box-shadow: 0 5px 10px 0 rgb(0 0 0 / 30%);
   width: 400px;
   border-radius: 10px;
   position: absolute;
   top: 40%;
-  left:50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   background-color: #181818;
 }
@@ -181,22 +194,27 @@ td {
 
 .submit {
   background: #fcdb4b;
-    color: #000000;
-    border-radius: 2px;
-    padding:8px 12px;
-    border:solid #fcdb4b 3px
+  color: #000000;
+  border-radius: 2px;
+  padding: 8px 12px;
+  border: solid #fcdb4b 3px;
 }
 
 .error {
-  color:red;
+  color: red;
   border: solid red 2px;
 }
 
-.errorTextHide {
-  display:none;
+.hide {
+  display: none;
 }
 
 .errorText {
-  color:red;
-  display:block;
+  color: red;
+  display: block;
+}
+
+.link {
+  color: #edd700;
+  text-decoration: underline;
 }
