--- a/Sprint 8/star-wars/src/App.css
+++ b/Sprint 8/star-wars/src/App.css
@@ -142,13 +142,23 @@ td {
 }
 
 .modal-bg {
-  position: fixed;
   background-color: rgba(0, 0, 0, 0.405);
+}
+
+
+.full-screen {
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   z-index: 999;
+}
+
+.top-right {
+  position: fixed;
+  top: 0;
+  right: 0;
 }
 
 .RegisterLogin {
